base/oauth/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy
  namespace: oauth
spec:
  forwardAuth:
    address: http://oauth2-proxy:4180
    authResponseHeaders:
      - Authorization
    trustForwardHeader: true
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth
spec:
  ports:
    - port: 4180
      targetPort: 4180
  selector:
    app: oauth2-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          args:
            - --http-address=0.0.0.0:4180
            - --upstream=http://echo-server:80
---
# Echo Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: ealen/echo-server
---
# Echo Server Service
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: oauth
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: echo-server
---
# IngressRoute for OAuth
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: oauth
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/oauth2`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
      middlewares:
        - name: oauth2-proxy
